--- a/src/app/components/shared/menu-principal/menu-principal.component.html
+++ b/src/app/components/shared/menu-principal/menu-principal.component.html
@@ -25,7 +25,12 @@
     </a>
   </li>
   <li class="treeview" routerLinkActive = "active">
-    <a [routerLink]="['/factura']" target=_blank>
+    <a [routerLink]="['/cliente']">
+      <i class="fa fa-th-list" aria-hidden="true"></i> <span>Lista de Clientes</span>
+    </a>
+  </li>
+  <li class="treeview" routerLinkActive = "active">
+    <a [routerLink]="['/factura']">
       <i class="ion-document-text"></i> <span>Facturas</span>
     </a>
   </li>
